--- a/package.json
+++ b/package.json
@@ -1,27 +1,45 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint ./ --cache --ext .tsx,.jsx,.ts"
-  },
-  "dependencies": {
-    "eslint": ">=5.16.0",
-    "logrocket": "^3.0.1",
-    "next": "latest",
-    "next-pwa": "^5.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.30.1",
-    "typescript": "4.5.4"
-  },
-  "pre-commit": [ "lint" ]
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint ./ --cache --ext .tsx,.jsx,.ts",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "dependencies": {
+        "@fontsource/inter": "^4.5.11",
+        "eslint": ">=5.16.0",
+        "logrocket": "^3.0.1",
+        "next": "latest",
+        "next-pwa": "^5.4.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "styled-components": "^5.3.5"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.18.6",
+        "@storybook/addon-actions": "^6.5.9",
+        "@storybook/addon-essentials": "^6.5.9",
+        "@storybook/addon-interactions": "^6.5.9",
+        "@storybook/addon-links": "^6.5.9",
+        "@storybook/builder-webpack5": "^6.5.9",
+        "@storybook/manager-webpack5": "^6.5.9",
+        "@storybook/react": "^6.5.9",
+        "@storybook/testing-library": "^0.0.13",
+        "@types/node": "17.0.4",
+        "@types/react": "17.0.38",
+        "@types/styled-components": "^5.1.25",
+        "@typescript-eslint/eslint-plugin": "^5.30.0",
+        "@typescript-eslint/parser": "^5.30.0",
+        "babel-loader": "^8.2.5",
+        "eslint-config-google": "^0.14.0",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-storybook": "^0.5.13",
+        "typescript": "4.5.4"
+    },
+    "pre-commit": [
+        "lint"
+    ]
 }
