Add Web3 auth packages

--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     },
     "dependencies": {
         "@fontsource/inter": "^4.5.11",
+        "@web3auth/base": "^1.1.1",
+        "@web3auth/ethereum-provider": "^1.1.1",
+        "@web3auth/metamask-adapter": "^1.1.1",
+        "@web3auth/openlogin-adapter": "^1.1.1",
+        "@web3auth/web3auth": "^1.1.1",
         "eslint": ">=5.16.0",
         "logrocket": "^3.0.1",
         "next": "latest",
         "next-pwa": "^5.4.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "styled-components": "^5.3.5"
+        "styled-components": "^5.3.5",
+        "web3": "^1.7.4"
     },
     "devDependencies": {
         "@babel/core": "^7.18.6",
