Add next/router storybook addon

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
         "@web3auth/openlogin-adapter": "^1.1.1",
         "@web3auth/web3auth": "^1.1.1",
         "eslint": ">=5.16.0",
+        "ethers": "^5.6.9",
         "logrocket": "^3.0.1",
-        "next": "latest",
+        "next": "^12.2.2",
         "next-pwa": "^5.4.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-qr-code": "^2.0.7",
+        "storybook-addon-next-router": "^4.0.0",
         "styled-components": "^5.3.5",
         "web3": "^1.7.4"
     },
