--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "next-pwa": "^5.4.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-number-format": "^4.9.3",
         "react-qr-code": "^2.0.7",
         "storybook-addon-next-router": "^4.0.0",
         "styled-components": "^5.3.5",
