--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "build-storybook": "build-storybook"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
         "@fontsource/inter": "^4.5.11",
         "@fontsource/roboto-mono": "^4.5.7",
+        "@mui/material": "^5.9.3",
         "@storybook/addon-a11y": "^6.5.10",
         "@web3auth/base": "^1.1.2",
         "@web3auth/ethereum-provider": "^1.1.2",
