--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "logrocket": "^3.0.1",
         "next": "^12.2.2",
         "next-pwa": "^5.4.1",
+        "notistack": "^2.0.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-number-format": "^4.9.3",
