--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "D O M Wallet Web App",
   "short_name": "D O M",
-  "theme_color": "#FEF200",
+  "theme_color": "#020202",
   "background_color": "#020202",
   "display": "fullscreen",
   "orientation": "portrait",
