--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@web3auth/metamask-adapter": "^1.1.2",
         "@web3auth/openlogin-adapter": "^1.1.2",
         "@web3auth/web3auth": "^1.1.2",
+        "axios": "^0.27.2",
         "eslint": ">=5.16.0",
         "ethers": "^5.6.9",
         "logrocket": "^3.0.1",
