--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@fontsource/roboto-mono": "^4.5.7",
         "@mui/material": "^5.9.3",
         "@storybook/addon-a11y": "^6.5.10",
+        "@tanstack/react-query": "^4.2.3",
+        "@tanstack/react-query-devtools": "^4.2.3",
         "@web3auth/base": "^1.1.2",
         "@web3auth/ethereum-provider": "^1.1.2",
         "@web3auth/metamask-adapter": "^1.1.2",
