--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "notistack": "^2.0.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-intersection-observer": "^9.4.0",
         "react-number-format": "^4.9.3",
         "react-qr-code": "^2.0.7",
         "react-qr-reader": "^3.0.0-beta-1",
