--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-qr-reader": "^3.0.0-beta-1",
         "storybook-addon-next-router": "^4.0.0",
         "styled-components": "^5.3.5",
+        "uuid": "^9.0.0",
         "web3": "^1.7.4"
     },
     "devDependencies": {
@@ -52,6 +53,7 @@
         "@types/node": "17.0.4",
         "@types/react": "17.0.38",
         "@types/styled-components": "^5.1.25",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.30.0",
         "@typescript-eslint/parser": "^5.30.0",
         "babel-loader": "^8.2.5",
