--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
         "@fontsource/inter": "^4.5.11",
         "@fontsource/roboto-mono": "^4.5.7",
         "@mui/material": "^5.9.3",
-        "@storybook/addon-a11y": "^6.5.10",
         "@tanstack/react-query": "^4.2.3",
         "@tanstack/react-query-devtools": "^4.2.3",
         "@web3auth/base": "^3.0.0",
@@ -47,27 +46,45 @@
     },
     "devDependencies": {
         "@babel/core": "^7.18.6",
-        "@storybook/addon-actions": "^6.5.10",
-        "@storybook/addon-essentials": "^6.5.10",
-        "@storybook/addon-interactions": "^6.5.10",
-        "@storybook/addon-links": "^6.5.10",
-        "@storybook/builder-webpack5": "^6.5.10",
-        "@storybook/manager-webpack5": "^6.5.10",
-        "@storybook/react": "^6.5.10",
+        "@storybook/addon-a11y": "^6.5.12",
+        "@storybook/addon-actions": "^6.5.12",
+        "@storybook/addon-essentials": "^6.5.12",
+        "@storybook/addon-interactions": "^6.5.12",
+        "@storybook/addon-jest": "^6.5.12",
+        "@storybook/addon-links": "^6.5.12",
+        "@storybook/builder-webpack5": "^6.5.12",
+        "@storybook/jest": "^0.0.10",
+        "@storybook/manager-webpack5": "^6.5.12",
+        "@storybook/react": "^6.5.12",
+        "@storybook/test-runner": "^0.7.2",
         "@storybook/testing-library": "^0.0.13",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/node": "17.0.4",
         "@types/react": "^18.0.21",
+        "@types/react-test-renderer": "^18.0.0",
         "@types/styled-components": "^5.1.25",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.30.0",
         "@typescript-eslint/parser": "^5.30.0",
+        "axe-playwright": "^1.1.11",
         "babel-loader": "^8.2.5",
-        "concurrently": "^7.5.0",
+        "concurrently": "^7.6.0",
         "eslint": "^8.26.0",
         "eslint-config-google": "^0.14.0",
-        "eslint-plugin-react": "^7.30.1",
-        "eslint-plugin-storybook": "^0.6.3",
+        "eslint-plugin-markdown": "^3.0.0",
+        "eslint-plugin-mdx": "^2.0.5",
+        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-storybook": "^0.6.4",
+        "eslint-plugin-testing-library": "^5.7.0",
         "http-server": "^14.1.1",
+        "jest": "^29.0.3",
+        "jest-environment-jsdom": "^29.0.3",
+        "jest-styled-components": "^7.1.1",
+        "msw": "^0.47.3",
+        "next-router-mock": "^0.7.4",
+        "react-test-renderer": "^18.2.0",
         "typescript": "4.7.4",
         "wait-on": "^6.0.1"
     },
