--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,13 @@
         "plugin:react/recommended",
         "google",
         "plugin:storybook/recommended",
-        "plugin:mdx/recommended"
+        "plugin:markdown/recommended"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -19,7 +24,29 @@
     },
     "plugins": [
         "react",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "testing-library"
+    ],
+    "overrides": [
+        {
+            "files": [
+                "**/__tests__/**/*.[jt]s?(x)",
+                "**/?(*.)+(spec|test).[jt]s?(x)"
+            ],
+            "extends": ["plugin:testing-library/react"]
+        },
+        {
+            "files": [
+                "*.mdx"
+            ],
+            "extends": ["plugin:mdx/recommended", "plugin:mdx/overrides"],
+            // Rules are used as a workaround, because mdx plugin confilcts with Google preset style, see: ...
+            // .. https://github.com/mdx-js/eslint-mdx/issues/182#issuecomment-604282448
+            "rules": {
+                "semi": 0,
+                "indent": 0
+            }
+        }
     ],
     "rules": {
         "object-curly-spacing": ["error", "always"],
