--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,36 @@
-node_modules
+# dependencies
+/node_modules
+
+# testing
+/coverage
+.jest-test-results.json
+
+# production
 build
+
+# next.js
+/.next/
+/out/
+
+# next-pwa
+**/public/workbox-*.js
+**/public/workbox-*.js.map
+**/public/sw.js
+**/public/sw.js.map
+**/public/worker-*.js
+
+# misc
 dist
 .eslintcache
-.next
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
