--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ stages:
 
 image: ubuntu
 before_script:
-    - apt-get update -qq
-    - apt-get install -qq git curl
+    #- apt-get update -qq
+    #- apt-get install -qq git curl
     - 'which ssh-agent || ( apt-get install -qq openssh-client )'
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$SSH_PRIVATE_KEY")
@@ -43,10 +43,9 @@ update_master:
     stage: deploy
     script:
       - >-
-        ssh dima@67.205.140.99 "cd /home/andrii/dom-pwa
-        && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
-        && sudo su
-        && yarn cache clean
+        ssh dima@67.205.140.99 "sudo -i
+        && cd /home/andrii/dom-pwa
+        && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.gitt
         && yarn
         && yarn build
         && pm2 restart dom-pwa
