Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,11 +33,11 @@ before_script:
     - git config --global user.email "olef_and@ukr.net"
     - git config --global user.name "andrii"
   
-test_package:
-    stage: test
-    script:
-      - >-
-        echo "nice"
+#test_package:
+#    stage: test
+#    script:
+#      - >-
+#        echo "nice"
 
 update_master:
     stage: deploy
