--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ stages:
 
 image: ubuntu
 before_script:
-    #- apt-get update -qq
-    #- apt-get install -qq git curl
+    - apt-get update -qq
+    - apt-get install -qq git curl
     - 'which ssh-agent || ( apt-get install -qq openssh-client )'
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$SSH_PRIVATE_KEY")
