--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,8 @@ update_master:
     script:
       - >-
         ssh dima@67.205.140.99 "cd /home/andrii/dom-pwa
-        && GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
+        && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
+        && sudo chown dima. $(pwd)
         && yarn
         && yarn build
         && pm2 restart dom-pwa
