Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ update_master:
       - >-
         ssh dima@67.205.140.99 "cd /home/andrii/dom-pwa
         && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
-        && sudo chown dima. $(pwd)
+        && sudo chown dima. /home/andrii/dom-pwa
         && yarn
         && yarn build
         && pm2 restart dom-pwa
