--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,9 @@ update_master:
         ssh dima@67.205.140.99 "cd /home/andrii/dom-pwa
         && source ~/.bashrc
         && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
+        && echo $(pwd) LOL
         && sudo chown dima. /home/andrii/dom-pwa
+        && echo $(pwd) LOL
         && yarn
         && yarn build
         && pm2 restart dom-pwa
