Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,12 +43,12 @@ update_master:
     stage: deploy
     script:
       - >-
-        ssh root@67.205.140.99 "cd /home/andrii/dom-pwa
+        ssh dima@67.205.140.99 "cd /home/andrii/dom-pwa
         && source ~/.bashrc
-        && GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
-        && yarn
-        && yarn build
-        && pm2 restart dom-pwa
+        && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
+        && sudo yarn
+        && sudo yarn build
+        && sudo pm2 restart dom-pwa
         && exit"
       
     only:
