--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,9 +43,11 @@ update_master:
     stage: deploy
     script:
       - >-
-        ssh root@67.205.140.99 "cd /home/andrii/dom-pwa
+        ssh dima@67.205.140.99 "cd /home/andrii/dom-pwa
         && source ~/.bashrc
         && GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
+        && nvm
+        && node -v
         && yarn
         && yarn build
         && pm2 restart dom-pwa
