Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ update_master:
       - >-
         ssh dima@67.205.140.99 "cd /home/andrii/dom-pwa
         && source /home/dima/.bashrc
-        && GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull git@gitlab.com:andrii.m.olefirenko/dom-pwa.git
+        && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull
         && nvm
         && node -v
         && yarn
