--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,10 @@ update_master:
     stage: deploy
     script:
       - >-
-        whoami
+        echo $PATH
+        && ls -lahs $HOME/
         && pwd
+        && cd $HOME/dom-pwa/
         && sudo GIT_SSH_COMMAND='ssh -i /root/.ssh/gitlab_rsa' git pull
         && whoami
         && pwd
