Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ update_master:
     stage: deploy
     script:
       - >-
+        source ~/.bashrc
         echo $PATH
         && ls -lahs $HOME/
         && pwd
