Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ update_master:
     script:
       - >-
         source ~/.bashrc
-        echo $PATH
+        && echo $PATH
         && ls -lahs $HOME/
         && pwd
         && cd $HOME/dom-pwa/
