--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,9 @@
 stages:
     - test
     - deploy
-
+before_script:
+  - export PATH=$PATH:/home/gitlab-runner/.nvm/versions/node/v14.20.1/bin
+  - export NVM_DIR="$HOME/.nvm"
 #image: ubuntu
 #before_script:
 #    - apt-get update -qq
