Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ update_master:
         && node -v
         && yarn
         && yarn build
-        && pm2 restart dom-pwa
+        && pm2 restart dom
         && exit
       
     only:
