--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "@web3auth/modal": "^3.0.2",
         "@web3auth/openlogin-adapter": "^3.0.0",
         "axios": "^0.27.2",
-        "eslint": ">=5.16.0",
         "ethers": "^5.7.2",
         "logrocket": "^3.0.1",
         "next": "^12.3.1",
@@ -57,6 +56,7 @@
         "@typescript-eslint/eslint-plugin": "^5.30.0",
         "@typescript-eslint/parser": "^5.30.0",
         "babel-loader": "^8.2.5",
+        "eslint": "^8.26.0",
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-storybook": "^0.6.3",
@@ -66,4 +66,3 @@
         "lint"
     ]
 }
-
