--- a/package.json
+++ b/package.json
@@ -59,8 +59,14 @@
         "babel-loader": "^8.2.5",
         "eslint": "^8.26.0",
         "eslint-config-google": "^0.14.0",
+        "eslint-config-next": "^13.0.1",
+        "eslint-plugin-json": "^3.1.0",
+        "eslint-plugin-markdown": "^3.0.0",
+        "eslint-plugin-mdx": "^2.0.5",
         "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-storybook": "^0.6.3",
+        "eslint-plugin-testing-library": "^5.9.1",
         "typescript": "4.7.4"
     },
     "pre-commit": [
