--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build": "next build",
         "start": "next start",
         "pwa": "next start -p 5454",
-        "lint": "eslint ./ --cache --ext .tsx,.jsx,.ts",
+        "lint": "eslint ./ --cache --ext .ts,.tsx,.js,.jsx,.md,.mdx,.json",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook"
     },
@@ -67,6 +67,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-storybook": "^0.6.3",
         "eslint-plugin-testing-library": "^5.9.1",
+        "pre-commit": "^1.2.2",
         "typescript": "4.7.4"
     },
     "pre-commit": [
