--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@typescript-eslint/eslint-plugin": "^5.30.0",
         "@typescript-eslint/parser": "^5.30.0",
         "babel-loader": "^8.2.5",
+        "concurrently": "^7.5.0",
         "eslint": "^8.26.0",
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-react": "^7.30.1",
