--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
         "build": "next build",
         "start": "next start",
         "pwa": "next start -p 5454",
-        "lint": "eslint ./ --cache --ext .tsx,.jsx,.ts",
+        "lint": "eslint ./ --cache --ext .tsx,.jsx,.ts,.js,.md,.mdx",
+        "test": "jest --watch",
+        "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+        "test:ci": "jest --ci --json --outputFile=.jest-test-results.json",
         "storybook": "start-storybook -p 6006",
+        "test-storybook": "test-storybook",
+        "test-storybook:ci": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"yarn build-storybook --quiet && npx http-server storybook-static --port 6006 --silent\" \"wait-on tcp:6006 && yarn test-storybook\"",
         "build-storybook": "build-storybook"
     },
     "dependencies": {
