--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,120 @@
+# TBD:
+# Implement deploy jobs to run via gitlab runner with docker executor ...
+# .. (instead of shell executor) and implement usage of pm2 deployment system.
 
 stages:
-    - test
-    - deploy
-before_script:
-  - export PATH=$PATH:/home/gitlab-runner/.nvm/versions/node/v16.18.0/bin
-  - export NVM_DIR="$HOME/.nvm"
-#image: ubuntu
-#before_script:
-#    - apt-get update -qq
-#    - apt-get install -qq git curl
-#    - 'which ssh-agent || ( apt-get install -qq openssh-client )'
-#    - eval $(ssh-agent -s)
-#    - ssh-add <(echo "$SSH_PRIVATE_KEY")
-#    - mkdir -p ~/.ssh
-#    - chmod 700 ~/.ssh
-#    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-#    - git config --global user.email "olef_and@ukr.net"
-#    - git config --global user.name "andrii"
-  
-#test_package:
-#    stage: test
-#    script:
-#      - >-
-#        echo "nice"
+  - build
+  - test
+  - deploy
 
-update_master:
-    stage: deploy
-    script:
-      - >-
-        source ~/.bashrc
-        && cd $HOME/dom-pwa/
-        && git config --global user.email "olef_and@ukr.net"
-        && git config --global user.name "andrii"
-        && GIT_SSH_COMMAND='ssh -i /home/gitlab-runner/.ssh/gitlab_rsa' git pull
-        && node -v
-        && yarn
-        && yarn build
-        && pm2 restart dom
-        && exit
-      
-    only:
-      - main
+variables:
+  NODE_VER: '16.18.1'
+
+cache: &global_cache
+  key: $CI_COMMIT_REF_SLUG
+  paths:
+    - node_modules/
+  policy: pull-push
+
+
+build_app:
+  stage: build
+
+  image: node:$NODE_VER
+
+  tags: [ 'docker' ]
+
+  artifacts:
+    paths:
+      - .next/
+
+  script:
+    - yarn
+    - yarn build
+    
+  only:
+    - merge_requests
+    - main
+
+
+test_app:
+  stage: test
+
+  image: node:$NODE_VER
+
+  tags: [ 'docker' ]
+
+  artifacts:
+    paths:
+      - .jest-test-results.json
+  
+  script:
+    - yarn
+    - yarn test:ci
+    
+  only:
+    - merge_requests
+    - main
+
+
+test_storybook:
+  stage: test
+
+  # Using playwright docker image (docker image version must match the ...
+  # .. version used by the app)
+  image: mcr.microsoft.com/playwright:v1.26.0-focal
+
+  tags: [ 'docker' ]
+
+  script:
+    - yarn
+    - yarn test-storybook:ci
+  
+  needs: [ 'test_app' ]
+
+  only:
+    - merge_requests
+    - main
+
+
+deploy_app:
+  stage: deploy
+
+  before_script:
+    # Copying test-results artifact to production folder
+    - cp .jest-test-results.json $HOME/dom-pwa/
+    - cd $HOME/dom-pwa/
+    - git config --global user.email "olef_and@ukr.net"
+    - git config --global user.name "andrii"
+    - GIT_SSH_COMMAND='ssh -i /home/gitlab-runner/.ssh/gitlab_rsa' git pull
+
+  script:
+    - yarn
+    - yarn build
+    - pm2 restart dom
+  
+  after_script:
+    - exit
+    
+  only:
+    - main
+
+
+deploy_storybook:
+  stage: deploy
+
+  script:
+    # Currently, there is a problem with using artifacts from a runner that ...
+    # uses a docker executor on a runner with a shell executor.
+    # As a workaround, we run jest tests again to generate the test results ...
+    # .. in the production folder for Storybook to use.
+    - yarn test:ci
+    - pm2 restart storybook
+  
+  after_script:
+    - exit
+  
+  needs: [ 'deploy_app' ]
+    
+  only:
+    - main
