--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
         "eslint-config-google": "^0.14.0",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-storybook": "^0.6.3",
-        "typescript": "4.7.4"
+        "http-server": "^14.1.1",
+        "typescript": "4.7.4",
+        "wait-on": "^6.0.1"
     },
     "pre-commit": [
         "lint"
