Set up junit reports

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,10 +47,14 @@ test_app:
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
 
   artifacts:
+    paths:
+      - coverage/
+      - junit.xml
     reports:
       coverage_report:
         coverage_format: cobertura
         path: coverage/cobertura-coverage.xml
+      junit: junit.xml
   
   script:
     - yarn
