--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "http-server": "^14.1.1",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
+        "jest-junit": "^15.0.0",
         "jest-styled-components": "^7.1.1",
         "msw": "^0.47.3",
         "next-router-mock": "^0.7.4",
