--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "pwa": "next start -p 5454",
         "lint": "eslint ./ --cache --ext .tsx,.jsx,.ts,.js,.md,.mdx",
         "test": "jest --watch",
-        "test:ci-generate-output": "jest --ci --json --outputFile=.jest-test-results.json || true",
         "test:ci-coverage": "jest --ci --coverage",
         "storybook": "start-storybook -p 6006",
         "test-storybook": "test-storybook",
@@ -81,6 +80,7 @@
         "http-server": "^14.1.1",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
+        "jest-json-reporter": "^1.2.2",
         "jest-junit": "^15.0.0",
         "jest-styled-components": "^7.1.1",
         "msw": "^0.47.3",
@@ -91,5 +91,8 @@
     },
     "pre-commit": [
         "lint"
-    ]
+    ],
+    "jestJsonReporter": {
+        "outputFile": "reports/jest-test-results.json"
+    }
 }
