--- a/package.json
+++ b/package.json
@@ -38,28 +38,28 @@
         "react-number-format": "^4.9.3",
         "react-qr-code": "^2.0.7",
         "react-qr-reader": "^3.0.0-beta-1",
-        "storybook-addon-next-router": "^4.0.1",
         "styled-components": "^5.3.5",
         "uuid": "^9.0.0",
         "victory": "^36.6.8"
     },
     "devDependencies": {
         "@babel/core": "^7.18.6",
-        "@storybook/addon-a11y": "^6.5.13",
-        "@storybook/addon-actions": "^6.5.13",
-        "@storybook/addon-essentials": "^6.5.13",
-        "@storybook/addon-interactions": "^6.5.13",
-        "@storybook/addon-jest": "^6.5.13",
-        "@storybook/addon-links": "^6.5.13",
-        "@storybook/builder-webpack5": "^6.5.13",
+        "@storybook/addon-a11y": "^6.5.14",
+        "@storybook/addon-actions": "^6.5.14",
+        "@storybook/addon-essentials": "^6.5.14",
+        "@storybook/addon-interactions": "^6.5.14",
+        "@storybook/addon-jest": "^6.5.14",
+        "@storybook/addon-links": "^6.5.14",
+        "@storybook/builder-webpack5": "^6.5.14",
         "@storybook/jest": "^0.0.10",
-        "@storybook/manager-webpack5": "^6.5.13",
-        "@storybook/react": "^6.5.13",
+        "@storybook/manager-webpack5": "^6.5.14",
+        "@storybook/react": "^6.5.14",
         "@storybook/test-runner": "^0.9.1",
         "@storybook/testing-library": "^0.0.13",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
+        "@types/body-scroll-lock": "^3.1.0",
         "@types/node": "17.0.4",
         "@types/react": "^18.0.21",
         "@types/react-test-renderer": "^18.0.0",
@@ -75,7 +75,7 @@
         "eslint-plugin-markdown": "^3.0.0",
         "eslint-plugin-mdx": "^2.0.5",
         "eslint-plugin-react": "^7.31.8",
-        "eslint-plugin-storybook": "^0.6.7",
+        "eslint-plugin-storybook": "^0.6.8",
         "eslint-plugin-testing-library": "^5.7.0",
         "http-server": "^14.1.1",
         "jest": "^29.0.3",
@@ -86,6 +86,7 @@
         "msw": "^0.47.3",
         "next-router-mock": "^0.7.4",
         "react-test-renderer": "^18.2.0",
+        "storybook-addon-next-router": "^4.0.1",
         "typescript": "4.7.4",
         "wait-on": "^6.0.1"
     },
