--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "pwa": "next start -p 5454",
         "lint": "eslint ./ --cache --ext .tsx,.jsx,.ts,.js,.md,.mdx",
         "test": "jest --watch",
+        "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
+        "test:coverage": "jest --watch --coverage",
+        "test:ci-generate-output": "jest --ci --json --outputFile=reports/jest-test-results.json || true",
         "test:ci-coverage": "jest --ci --coverage",
         "storybook": "start-storybook -p 6006",
         "test-storybook": "test-storybook",
