--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "@typescript-eslint/parser": "^5.30.0",
         "axe-playwright": "^1.1.11",
         "babel-loader": "^8.2.5",
+        "body-scroll-lock": "^4.0.0-beta.0",
         "concurrently": "^7.6.0",
         "eslint": "^8.26.0",
         "eslint-config-google": "^0.14.0",
