--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "storybook": "start-storybook -p 6006",
         "test-storybook": "test-storybook",
         "test-storybook:ci": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"yarn build-storybook --quiet && npx http-server storybook-static --port 6006 --silent\" \"wait-on tcp:6006 && yarn test-storybook\"",
-        "build-storybook": "build-storybook"
+        "build-storybook": "build-storybook",
+        "postinstall": "husky install"
     },
     "dependencies": {
         "@emotion/react": "^11.10.0",
@@ -85,19 +86,16 @@
         "eslint-plugin-storybook": "^0.6.11",
         "eslint-plugin-testing-library": "^5.10.3",
         "http-server": "^14.1.1",
+        "husky": "^8.0.3",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "jest-junit": "^15.0.0",
         "jest-styled-components": "^7.1.1",
         "msw": "^0.47.3",
         "next-router-mock": "^0.7.4",
-        "pre-commit": "^1.2.2",
         "react-test-renderer": "^18.2.0",
         "storybook-addon-next-router": "^4.0.1",
         "typescript": "4.7.4",
         "wait-on": "^6.0.1"
-    },
-    "pre-commit": [
-        "lint"
-    ]
+    }
 }
