--- a/package.json
+++ b/package.json
@@ -1,101 +1,109 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "pwa": "next start -p 5454",
-        "lint": "eslint ./ --cache --ext .ts,.tsx,.js,.jsx,.md,.mdx,.json",
-        "test": "jest --watch",
-        "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
-        "test:coverage": "jest --watch --coverage",
-        "test:ci-generate-output": "jest --ci --json --outputFile=reports/jest-test-results.json || true",
-        "test:ci-coverage": "jest --ci --coverage",
-        "storybook": "start-storybook -p 6006",
-        "test-storybook": "test-storybook",
-        "test-storybook:ci": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"yarn build-storybook --quiet && npx http-server storybook-static --port 6006 --silent\" \"wait-on tcp:6006 && yarn test-storybook\"",
-        "build-storybook": "build-storybook",
-        "postinstall": "husky install"
-    },
-    "dependencies": {
-        "@emotion/react": "^11.10.0",
-        "@emotion/styled": "^11.10.0",
-        "@fontsource/inter": "^4.5.11",
-        "@fontsource/roboto-mono": "^4.5.7",
-        "@mui/material": "^5.9.3",
-        "@tanstack/react-query": "^4.2.3",
-        "@tanstack/react-query-devtools": "^4.2.3",
-        "@web3auth/base": "^3.0.0",
-        "@web3auth/ethereum-provider": "^3.0.0",
-        "@web3auth/metamask-adapter": "^3.0.0",
-        "@web3auth/modal": "^3.0.2",
-        "@web3auth/openlogin-adapter": "^3.0.0",
-        "axios": "^0.27.2",
-        "ethers": "^5.7.2",
-        "logrocket": "^3.0.1",
-        "next": "^12.3.1",
-        "next-pwa": "^5.6.0",
-        "notistack": "^2.0.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-intersection-observer": "^9.4.0",
-        "react-number-format": "^4.9.3",
-        "react-qr-code": "^2.0.7",
-        "react-qr-reader": "^3.0.0-beta-1",
-        "styled-components": "^5.3.5",
-        "uuid": "^9.0.0",
-        "victory": "^36.6.8"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.18.6",
-        "@storybook/addon-a11y": "^6.5.14",
-        "@storybook/addon-actions": "^6.5.14",
-        "@storybook/addon-essentials": "^6.5.14",
-        "@storybook/addon-interactions": "^6.5.14",
-        "@storybook/addon-jest": "^6.5.14",
-        "@storybook/addon-links": "^6.5.14",
-        "@storybook/builder-webpack5": "^6.5.14",
-        "@storybook/jest": "^0.0.10",
-        "@storybook/manager-webpack5": "^6.5.14",
-        "@storybook/react": "^6.5.14",
-        "@storybook/test-runner": "^0.9.1",
-        "@storybook/testing-library": "^0.0.13",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^14.4.3",
-        "@types/body-scroll-lock": "^3.1.0",
-        "@types/node": "17.0.4",
-        "@types/react": "^18.0.21",
-        "@types/react-test-renderer": "^18.0.0",
-        "@types/styled-components": "^5.1.25",
-        "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.30.0",
-        "@typescript-eslint/parser": "^5.30.0",
-        "axe-playwright": "^1.1.11",
-        "babel-loader": "^8.2.5",
-        "body-scroll-lock": "^4.0.0-beta.0",
-        "concurrently": "^7.6.0",
-        "eslint": "^8.26.0",
-        "eslint-config-google": "^0.14.0",
-        "eslint-config-next": "^13.0.1",
-        "eslint-plugin-json": "^3.1.0",
-        "eslint-plugin-markdown": "^3.0.0",
-        "eslint-plugin-mdx": "^2.0.5",
-        "eslint-plugin-react": "^7.30.1",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-storybook": "^0.6.11",
-        "eslint-plugin-testing-library": "^5.10.3",
-        "http-server": "^14.1.1",
-        "husky": "^8.0.3",
-        "jest": "^29.0.3",
-        "jest-environment-jsdom": "^29.0.3",
-        "jest-junit": "^15.0.0",
-        "jest-styled-components": "^7.1.1",
-        "msw": "^0.47.3",
-        "next-router-mock": "^0.7.4",
-        "react-test-renderer": "^18.2.0",
-        "storybook-addon-next-router": "^4.0.1",
-        "typescript": "4.7.4",
-        "wait-on": "^6.0.1"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "pwa": "next start -p 5454",
+    "lint": "eslint ./ --cache --ext .ts,.tsx,.js,.jsx,.md,.mdx,.json",
+    "test": "jest --watch",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
+    "test:coverage": "jest --watch --coverage",
+    "test:ci-generate-output": "jest --ci --json --outputFile=reports/jest-test-results.json || true",
+    "test:ci-coverage": "jest --ci --coverage",
+    "storybook": "storybook dev -p 6006",
+    "test-storybook": "test-storybook",
+    "test-storybook:ci": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"yarn build-storybook --quiet && npx http-server storybook-static --port 6006 --silent\" \"wait-on tcp:6006 && yarn test-storybook\"",
+    "build-storybook": "storybook build",
+    "postinstall": "husky install"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.21.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/roboto-mono": "^4.5.10",
+    "@mui/material": "^5.12.1",
+    "@tanstack/react-query": "^4.29.3",
+    "@tanstack/react-query-devtools": "^4.29.3",
+    "@types/node": "^18.15.11",
+    "@types/react": "18.0.37",
+    "@types/react-dom": "18.0.11",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/sign-client": "^2.7.0",
+    "@web3auth/base": "^5.1.0",
+    "@web3auth/ethereum-provider": "^5.1.1",
+    "@web3auth/metamask-adapter": "^5.1.0",
+    "@web3auth/modal": "^5.1.1",
+    "@web3auth/openlogin-adapter": "^5.1.1",
+    "@web3auth/wallet-connect-v2-adapter": "^5.1.1",
+    "axios": "^1.3.6",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "13.3.0",
+    "ethers": "5.7.2",
+    "logrocket": "^4.0.0",
+    "next": "13.3.0",
+    "next-pwa": "^5.6.0",
+    "notistack": "^3.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-number-format": "^5.1.4",
+    "react-qr-code": "^2.0.11",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "styled-components": "^5.3.9",
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0",
+    "victory": "^36.6.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@storybook/addon-a11y": "^7.0.6",
+    "@storybook/addon-actions": "^7.0.6",
+    "@storybook/addon-essentials": "^7.0.6",
+    "@storybook/addon-interactions": "^7.0.6",
+    "@storybook/addon-jest": "^7.0.6",
+    "@storybook/addon-links": "^7.0.6",
+    "@storybook/blocks": "^7.0.6",
+    "@storybook/jest": "^0.1.0",
+    "@storybook/nextjs": "^7.0.6",
+    "@storybook/react": "^7.0.6",
+    "@storybook/test-runner": "^0.10.0",
+    "@storybook/testing-library": "^0.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/body-scroll-lock": "^3.1.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@walletconnect/types": "^2.7.0",
+    "axe-playwright": "^1.2.3",
+    "babel-loader": "^9.1.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "concurrently": "^8.0.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-markdown": "^3.0.0",
+    "eslint-plugin-mdx": "^2.0.5",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-testing-library": "^5.10.3",
+    "http-server": "^14.1.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-junit": "^16.0.0",
+    "jest-styled-components": "^7.1.1",
+    "msw": "^1.2.1",
+    "next-router-mock": "^0.9.3",
+    "playwright": "^1.32.3",
+    "react-test-renderer": "^18.2.0",
+    "storybook": "^7.0.6",
+    "wait-on": "^7.0.1",
+    "webpack": "^5.80.0"
+  }
 }
