--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,4 @@ NEXT_PUBLIC_NETWORK_TYPE=testnet
 NEXT_PUBLIC_USDC_CONTRACT_ADDRESS=0x52a4db3888b4e161a9da74b8eb05e0c899ed7885
 NEXT_PUBLIC_DOM_CONTRACT_ADDRESS=0x78b8e6DcE99875bB9b56aE7F374a4BaFF79f826f
 NEXT_PUBLIC_ETHERSCAN_BASE_URL=https://api-testnet.polygonscan.com/api
+NEXT_PUBLIC_GELATO_RELAY_API_KEY=dheULaXpQQzEn3FQ4FiUZFDE93extEoag80U_5vaVDo_
