--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource/inter": "^4.5.15",
     "@fontsource/roboto-mono": "^4.5.10",
     "@mui/material": "^5.12.1",
+    "@safe-global/relay-kit": "^1.0.0",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.29.3",
     "@types/node": "^18.15.11",
@@ -54,7 +55,8 @@
     "styled-components": "^5.3.9",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
-    "victory": "^36.6.8"
+    "victory": "^36.6.8",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
